--- a/css/style.css/style.css
+++ b/css/style.css/style.css
@@ -117,9 +117,51 @@ header {
   margin-left: auto;
 }
 
-main {
+#main_cloud {
   flex: 1 1 auto;
   background: url("../../img/back2.png") no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+#main_inst {
+  flex: 1 1 auto;
+  background: url("../../img/inst_back.png") no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+#main_vk {
+  flex: 1 1 auto;
+  background: url("../../img/vk_back.png") no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+#main_facebook {
+  flex: 1 1 auto;
+  background: url("../../img/facebook_back.png") no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+#main_youtube {
+  flex: 1 1 auto;
+  background: url("../../img/youtube_back.png") no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+#main_telegram {
+  flex: 1 1 auto;
+  background: url("../../img/telegram_back.png") no-repeat;
+  background-size: cover;
+  background-attachment: fixed;
+}
+
+#main_tiktok {
+  flex: 1 1 auto;
+  background: url("../../img/tiktok_back.png") no-repeat;
   background-size: cover;
   background-attachment: fixed;
 }
@@ -159,7 +201,8 @@ main {
 .menu_row .nav_menu li .menu__link {
   color: black;
   display: block;
-  font-size: 16px;
+  font-size: 17px;
+  font-family: "Montserrat Regular";
 }
 .menu_row .nav_menu li .menu__link:hover {
   text-decoration: underline;
@@ -229,6 +272,7 @@ main {
   justify-content: center;
 }
 .top__block_content .top__block_title .block__title_img {
+  width: 70px;
   margin: 0 25px 0 0;
 }
 .top__block_content .top__block_title .top__title {
@@ -242,7 +286,7 @@ main {
   margin: 40px 0 0 0;
 }
 .main__block_content .left__block {
-  flex: 0 1 15%;
+  flex: 0 1 20%;
   display: flex;
   flex-direction: column;
 }
@@ -251,9 +295,10 @@ main {
   position: relative;
   display: inline-flex;
   align-items: center;
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   background-color: #fff;
   border-radius: 25px;
-  padding: 18px 0 18px 25px;
+  padding: 18px 20px 18px 25px;
   margin: 0 0 8px 0;
   cursor: pointer;
 }
@@ -268,9 +313,16 @@ main {
 .main__block_content .left__block .left__block_item .item__img_2 {
   margin: 0 0 0 2px;
 }
+.main__block_content .left__block .left__block_item .item__img_3 {
+  margin: 0 0 0 6px;
+}
+.main__block_content .left__block .left__block_item .item__img_4 {
+  margin: 0 0 0 2px;
+}
 .main__block_content .left__block .left__block_item .item__img {
   position: absolute;
   transform: scale(0.9);
+  left: 20px;
 }
 .main__block_content .left__block .left__block_item .item__text {
   font-family: "Montserrat Medium";
@@ -280,19 +332,64 @@ main {
 .main__block_content .left__block .left__block_item.active {
   box-shadow: 0px 5px 2px rgba(94, 72, 72, 0.2);
 }
-.main__block_content .left__block .left__block_item_4 {
-  padding: 10px 0 10px 25px;
+.main__block_content .left__block .left__block_item_double {
+  padding: 9px 20px 9px 25px;
 }
-.main__block_content .left__block .left__block_item_5 {
-  padding: 10px 10px 10px 25px;
+
+.new__structure {
+  display: flex;
+}
+
+.center__block_1 .center__block_body_1 {
+  margin-top: 30px !important;
+}
+.center__block_1 .center__block_body_2 {
+  margin-top: 30px !important;
+}
+.center__block_1 .center__block_body_3 {
+  margin-top: 30px !important;
+}
+.center__block_1 .center__block_body_4 {
+  margin-top: 30px !important;
+}
+.center__block_1 .center__block_body_5 {
+  margin-top: 30px !important;
 }
 
 .center__block {
   flex: 1 1 auto;
+  position: relative;
   max-width: 450px;
-  margin: 40px auto;
+  margin: 0 auto;
   display: flex;
   flex-direction: column;
+}
+.center__block .center__block_toplink {
+  display: flex;
+  position: absolute;
+  top: -55px;
+  flex-wrap: wrap;
+  justify-content: space-around;
+}
+.center__block .center__block_toplink .center__block_top_item {
+  flex-wrap: nowrap;
+  line-height: 25px;
+  font-size: 15px;
+  cursor: pointer;
+  margin: 0 3px;
+}
+.center__block .center__block_toplink .center__block_top_item:hover {
+  font-weight: 700;
+  text-decoration: underline;
+  transition: all 0.2s ease 0s;
+}
+.center__block .center__block_toplink .center__block_top_item:not(:hover) {
+  transition: all 0.2s ease 0s;
+}
+.center__block .center__block_toplink .center__block_top_item.active {
+  font-weight: 700;
+  text-decoration: underline;
+  transition: all 0.2s ease 0s;
 }
 .center__block .center__block_body {
   background-color: #0079C7;
@@ -378,6 +475,7 @@ main {
   display: none;
 }
 .center__block .checkbox__block .checkbox__label {
+  -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
   position: relative;
   cursor: pointer;
 }
@@ -406,16 +504,24 @@ main {
   margin: 0 0 0 23px;
 }
 
-.center__block_1, .center__block_2, .center__block_3, .center__block_4, .center__block_5 {
+.center__block_1, .center__block_2, .center__block_3, .center__block_4, .center__block_5, .center__block_6, .center__block_7 {
   display: none;
 }
 
-.center__block_1.active, .center__block_2.active, .center__block_3.active, .center__block_4.active, .center__block_5.active {
+.center__block_1.active, .center__block_2.active, .center__block_3.active, .center__block_4.active, .center__block_5.active, .center__block_6.active, .center__block_7.active {
   display: flex;
 }
 
+.center__block_body_1, .center__block_body_2, .center__block_body_3, .center__block_body_4, .center__block_body_5 {
+  display: none !important;
+}
+
+.center__block_body_1.active, .center__block_body_2.active, .center__block_body_3.active, .center__block_body_4.active, .center__block_body_5.active {
+  display: flex !important;
+}
+
 .right__block {
-  flex: 0 1 27%;
+  flex: 0 1 25%;
 }
 .right__block .right__block_text {
   margin: 80px 0 0 0;
@@ -438,12 +544,14 @@ main {
   }
   .menu_row .menu__burger {
     right: 5%;
+    -webkit-tap-highlight-color: rgba(0, 0, 0, 0);
     display: block !important;
     width: 40px;
     height: 25px;
     margin: 0;
     position: absolute;
     z-index: 3;
+    cursor: pointer;
   }
   .menu_row .menu__burger:before, .menu_row .menu__burger:after {
     content: "";
@@ -482,11 +590,11 @@ main {
     transform: scale(0);
   }
   .menu_row .nav_menu {
-    position: fixed;
+    position: absolute;
     top: -205%;
     left: 0;
     width: 100%;
-    height: 50px;
+    height: 60px;
     z-index: 1;
     padding: 0;
     text-align: center;
@@ -496,11 +604,9 @@ main {
   }
   .menu_row .nav_menu.active {
     top: 115px;
+    padding: 0 5px;
     z-index: 1;
-    overflow: scroll;
     transition: all 0.3s;
-    margin-bottom: 10px;
-    position: fixed;
     display: flex;
     flex-wrap: wrap;
     background-color: #fff;
@@ -509,11 +615,14 @@ main {
     margin: 0 15% 0 0;
   }
 
-  .top__block_title .block__title_img {
+  .top__block_content {
+    padding: 50px 0 0 0;
+  }
+  .top__block_content .top__block_title .block__title_img {
     width: 48px;
     height: auto;
   }
-  .top__block_title .top__title {
+  .top__block_content .top__block_title .top__title {
     font-size: 45px !important;
   }
 
@@ -521,8 +630,24 @@ main {
     flex-wrap: wrap;
     position: relative;
   }
+  .main__block_content .new__structure {
+    flex-direction: column;
+  }
+  .main__block_content .new__structure .center__block_toplink {
+    display: flex;
+  }
+  .main__block_content .new__structure .right__block {
+    margin: 0;
+  }
   .main__block_content .center__block {
     max-width: 370px;
+  }
+  .main__block_content .center__block .center__block_toplink {
+    top: -55px;
+  }
+  .main__block_content .center__block .center__block_body_1, .main__block_content .center__block .center__block_body_2, .main__block_content .center__block .center__block_body_3, .main__block_content .center__block .center__block_body_4 {
+    margin: 30px auto !important;
+    margin-bottom: 0 !important;
   }
   .main__block_content .center__block .http__input {
     padding: 15px 100px 15px 20px !important;
@@ -569,6 +694,9 @@ main {
   }
 }
 @media (max-width: 440px) {
+  .menu_row {
+    padding: 0 0 30px 0;
+  }
   .menu_row .brand {
     flex: 0 1 150px;
   }
@@ -576,10 +704,13 @@ main {
     max-width: 85%;
   }
   .menu_row .menu__burger {
-    top: 13%;
+    top: 15%;
   }
   .menu_row .menu__button {
-    margin: 55px 0 0 0;
+    margin: 80px 0 0 0;
+  }
+  .menu_row .nav_menu.active {
+    top: 120px !important;
   }
 
   .top__block_content {
@@ -596,10 +727,32 @@ main {
     margin: 30px 0 0 0;
   }
   .main__block_content .center__block {
-    margin: 20px auto;
+    margin: 20px auto !important;
+  }
+  .main__block_content .center__block .center__block_toplink {
+    top: -15px;
+  }
+  .main__block_content .center__block .center__block_body_1, .main__block_content .center__block .center__block_body_2, .main__block_content .center__block .center__block_body_3, .main__block_content .center__block .center__block_body_4 {
+    margin: 65px auto !important;
+    margin-bottom: 0 !important;
   }
   .main__block_content .center__block .http__input {
     padding: 15px 60px 15px 20px !important;
+  }
+  .main__block_content .center__block_1 .center__block_body_1 {
+    margin-top: 100px !important;
+  }
+  .main__block_content .center__block_1 .center__block_body_2 {
+    margin-top: 100px !important;
+  }
+  .main__block_content .center__block_1 .center__block_body_3 {
+    margin-top: 100px !important;
+  }
+  .main__block_content .center__block_1 .center__block_body_4 {
+    margin-top: 100px !important;
+  }
+  .main__block_content .center__block_1 .center__block_body_5 {
+    margin-top: 100px !important;
   }
   .main__block_content .right__block_text p {
     font-size: 13px !important;
